// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно вычислить пункты для селекта 1`] = `
Array [
  <Item
    key="A1"
    search=""
    value="A1"
  >
    a1
  </Item>,
  <ItemGroup
    key="B2"
  >
    <ItemGroupRoot
      search=""
      value="B2"
    >
      b2
    </ItemGroupRoot>
    <Item
      key="a1"
      value="B2#a1"
    >
      b2 odin
    </Item>
    <Item
      key="a2"
      value="B2#a2"
    >
      b2 dva
    </Item>
  </ItemGroup>,
  <Item
    key="C3"
    search=""
    value="C3"
  >
    c3
  </Item>,
]
`;

exports[`не должен отобразить имя модели перед шильдом, если у шильда есть параметр no_model 1`] = `
<ItemGroup
  key="B2"
>
  <ItemGroupRoot
    search=""
    value="B2"
  >
    b2
  </ItemGroupRoot>
  <Item
    key="a1"
    value="B2#a1"
  >
    odin
  </Item>
</ItemGroup>
`;
